# platform.core.uifw.ise-engine-default

./: AUTHORS  ChangeLog  Makefile.am  NOTICE  README  bootstrap  configure.ac  ise-engine-default.xml  project.config
data/: Makefile.am
debian/: changelog  control  rules
packaging/: ise-engine-default.changes  ise-engine-default.spec
src/: Makefile.am  isf_default_imengine.cpp  isf_default_imengine.h  kdb_resource.h
